force-app/main/default/objects/List_Of_Values_Rel__c.object
<CustomObject>
    <description>Dependencies within the List Of Values table</description>
    <fields>
        <fullName>Child_Label__c</fullName>
        <description>Child record value &amp; description</description>
        <formula>Child__r.Value__c &amp;&apos; (&apos;&amp; Child__r.Description__c &amp;&apos;)&apos;</formula>
        <inlineHelpText>Child record value &amp; description</inlineHelpText>
        <label>Child Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Type__c</fullName>
        <formula>TEXT(Child__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Value__c</fullName>
        <formula>Child__r.Value__c</formula>
        <label>Child Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Child</label>
        <referenceTo>List_of_Values__c</referenceTo>
        <relationshipLabel>Child Values</relationshipLabel>
        <relationshipName>Child_LOV</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Label__c</fullName>
        <description>Parent value and description</description>
        <formula>Parent__r.Value__c &amp; &apos; (&apos; &amp; Parent__r.Description__c &amp; &apos;)&apos;</formula>
        <inlineHelpText>Parent value and description</inlineHelpText>
        <label>Parent Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Type__c</fullName>
        <formula>TEXT(Parent__r.Type__c)</formula>
        <label>Parent Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Value__c</fullName>
        <formula>Parent__r.Value__c</formula>
        <label>Parent Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Parent</label>
        <referenceTo>List_of_Values__c</referenceTo>
        <relationshipLabel>Parent Values</relationshipLabel>
        <relationshipName>Parent_LOV</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>List Of Values Rel</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent__c</columns>
        <columns>Child__c</columns>
        <columns>Parent_Type__c</columns>
        <columns>Child_Type__c</columns>
        <columns>Parent_Value__c</columns>
        <columns>Child_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOVR-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List Of Values Rels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>